trying to add sample-listing code, no luck with filesystem.enumerate so far

--- a/README
+++ b/README
@@ -19,3 +19,8 @@ Alt-right-click       |   deselect everything      decrease node's strength*   d
 ----------------------+-----------------------------------------------------------------------------------
 
 If a strength or transmission time is reduced to zero, the corresponding entity is destroyed.
+
+
+
+base analog sounds by fugwhump, from http://ccmixter.org/files/fugwhump/17527 via http://creativecommons.org/licenses/by/3.0/
+
