experimenting with bpm instead of quantize

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
   so the overlap/selection of them is clearer
 - un-break the quantize step timing
 - make samples actually work
+- how are we going to hook this up to MIDI? because I think that would be SWEET!
