--- a/TODO
+++ b/TODO
@@ -1,5 +1,3 @@
-- don't allow two nodes to be connected in both directions, or improve drawing 
-  so the overlap/selection of them is clearer
 - un-break the quantize step timing
-- make samples actually work
+- make custom samples load
 - how are we going to hook this up to MIDI? because I think that would be SWEET!
